# AI-Reader

./: .gitignore  AI阅读助手讨论方案.md  ui_00.html  中间区域优化建议讨论02.md  中间区域优化讨论建议.md  其他讨论.txt  右侧区域优化讨论.md  左侧区域优化建议01.md  左侧区域优化建议02.md
backend/: main.py  ocr_api.py  pyproject.toml  test.py  use_knowledge.txt
frontend/: .eslintignore  .eslintrc.js  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: BookPanel.vue  CameraOCR.vue  ChatPanel.vue  NavBar.vue  SelectionMenu.vue  SideNav.vue  Sidebar.vue  SidebarOriginal01.vue
frontend/src/components/book/: BookContent.vue  BookFooter.vue  BookHeader.vue  BookmarksPanel.vue  ChapterNav.vue  NotesPanel.vue  SelectionMenu.vue  index.vue
frontend/src/components/chat/: ChatHeader.vue  ChatInput.vue  ChatMessages.vue  DrawingTool.vue  LearningTools.vue  QuestionSuggestions.vue  SettingsPanel.vue  index.vue
frontend/src/components/common/: Button.vue  Dropdown.vue  Modal.vue  ProgressBar.vue  StatusBadge.vue
frontend/src/components/layout/: NavBar.vue  SideNav.vue
frontend/src/components/ocr/: CameraOCR.vue
frontend/src/components/sidebar/: CollapsedSidebarIcons.vue  README.md  SidebarPanel.vue  SidebarSettingsPanel.vue  (+2 more)
frontend/src/composables/: useBookNavigation.js  useBookmarks.js  useChat.js  useEventBus.js  useNotes.js  useTheme.js  useUISettings.js
frontend/src/services/: api.js  bookService.js  ocrService.js  userService.js
frontend/src/store/: bookPages.js  index.js
(+32 files in other folders)
